--- a/GetLocation/GetLocation/Pages/Index.razor
+++ b/GetLocation/GetLocation/Pages/Index.razor
@@ -10,7 +10,7 @@
 
     private async Task<(long, long)> GetLocation()
     {
-        ValueTuple<long, long> location = await JS.InvokeAsync<(long longitude, long lattitude)>("getLocation");
+        ValueTuple<long, long> location = await JS.InvokeAsync<(long longitude, long lattitude)>("getCoords");
         return location;
     }
 }
